main.css
html,
body {
  overflow: hidden; /* Disable scrolling */
  height: 100%; /* Ensure full-page coverage */
}

* {
  margin: 0;
  padding: 0;
}

/* Animations */

@keyframes opacity-fill {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 100%;
  }
}

@keyframes opacity-fade {
  0% {
    opacity: 100%;
  }
  100% {
    opacity: 0;
  }
}

@keyframes logo-revile {
  0% {
    background-size: 70%;
    background-position: center center;
  }
  100% {
    background-size: 60%;
    background-position: center center;
  }
}

@keyframes logo-to-top {
  0% {
    background-size: 60%;
    background-position: center center;
  }
  100% {
    background-size: 40%;
    background-position: center -90px;
  }
}

@keyframes worrior-1 {
  0% {
    background-size: 150%;
    background-position: 10px bottom;
  }
  100% {
    background-size: 170%;
    background-position: -30px bottom;
  }
}

@keyframes worrior-2 {
  0% {
    background-size: 150%;
    background-position: right bottom;
  }
  100% {
    background-size: 170%;
    background-position: -200px bottom;
  }
}

.container {
  width: 100vw;
  height: 100vh;
  background-color: black;
  padding-top: 30%;
}

.background {
  height: 100%;
  width: 100%;
  background-image: url("");
  background-size: cover;
  background-repeat: no-repeat;
  opacity: 0;
  animation: opacity-fill 2s linear 1s forwards,
    opacity-fade 2s linear 5s forwards;
}

.background-red {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  right: 0;
  background-image: url("img/bg.png");
  background-size: cover;
  background-repeat: no-repeat;
  opacity: 0;
  animation: opacity-fill 1s linear 3s forwards;
}

/* .worrior-1 {
  position: absolute;
  width: 600px;
  height: 600px;
  bottom: 0;
  right: 0;
  background-image: url("img/astro.png");
  background-repeat: no-repeat;
  background-size: 50%;
  background-position: 10px bottom;
  opacity: 0;
  animation: opacity-fill 2s linear 1s forwards;
} */

/* .worrior-2 {
  position: absolute;
  width: 600px;
  height: 600px;
  bottom: 0;
  left: 0;
  background-image: url("img/Group\ 6.png");
  background-repeat: no-repeat;
  background-size: 45%;
  background-position: right bottom;
  opacity: 0;
  animation: opacity-fill 2s linear 1s forwards ;
} */

.logo {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  right: 0;
  background-image: url("img/saviskara-logo.png");
  background-repeat: no-repeat;
  background-size: 60%;
  background-position: center center;
  animation: logo-revile 3s linear, logo-to-top 0.5s linear 5s forwards;
}

.paper {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  right: 0;
  background-image: url("img/Group\ 8.png");
  background-repeat: no-repeat;
  background-size: 35%;
  background-position: center 150px;
  opacity: 0;
  animation: opacity-fill 1s linear 5s forwards;
}

.description {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  right: 0;
  background-image: url("");
  background-repeat: no-repeat;
  background-size: 50%;
  background-position: center 250px;
  opacity: 0;
  animation: opacity-fill 1s linear 5s forwards;
}

.credit {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  right: 0;
  background-image: url("img/pite\ 1.png");
  background-repeat: no-repeat;
  background-size: 25%;
  background-position: center bottom;
  opacity: 0;
  animation: opacity-fill 1s linear 5s forwards;
}

@media (max-width: 435px) {
  @keyframes logo-revile-mobile {
    0% {
      background-position: center center;
      background-size: 90%;
    }

    50% {
      background-position: center center;
      background-size: 95%;
    }

    100% {
      background-position: center center;
      background-size: 130%;
    }
  }

  @keyframes logo-to-top-mobile {
    0% {
      background-position: center center;
      background-size: 130%;
    }

    100% {
      background-size: 110%;
      background-position: center -15px;
    }
  }


  @keyframes worrior-mobile {
    0% {
      background-size: 150%;
    }

    100% {
      background-size: 160%;
    }
  }

  .background {
    height: 100%;
  }

  .background-red {
    opacity: 0;
  }

  .worrior-1 {
    position: absolute;
    width: 65%;
    height: 30%;
    bottom: 0;
    left: 8%;
    background-image: url("img/astro.png");
    background-repeat: no-repeat;
    background-size: 100%;
    background-position: 10px bottom;
    opacity: 0;
    animation: opacity-fill 2s linear 3.3s forwards;
  }

  .worrior-2 {
    position: absolute;
    width: 30%;
    height: 20%;
    bottom: 61%;
    left: 5%;
    background-image: url("img/Group\ 6.png");
    background-repeat: no-repeat;
    background-size: 100%;
    background-position: left top;
    opacity: 0;
    animation: opacity-fill 2s linear 3.3s forwards;
  }
  /* 
  .worrior-2 {
    width: 100%;
    height: 300px;
    bottom: 0;
    right: 0;
    opacity: 0%;
    background-position: right 20px;
    background-size: 150%;
    animation: opacity-fill 2s linear 1s forwards, worrior-mobile 0.5s linear 5s forwards;
  } */

  .logo {
    height: 100%;
    width: 100%;
    top: 0%;
    background-size: contain;
    background-position: center center;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 130%;
    animation: logo-revile-mobile 1.5s linear,
      logo-to-top-mobile 0.5s linear 3s forwards;
  }

  .paper {
    /* background-size: 100%;
    top: 140px; */
    position: absolute;
    width: 100%;
    height: 100%;
    top: 15%;
    right: 0;
    background-image: url("img/Group\ 8.png");
    background-repeat: no-repeat;
    background-size: 120%;
    background-position: center 150px;
    opacity: 0;
    animation: opacity-fill 1s linear 3s forwards;
  }

  .description {
    background-size: 75%;
    background-position: center 200px;
  }
  .credit {
    background-size: 75%;
    background-position: center bottom;
  }
}

